<resources>
    <string name="app_name">Bookstore</string>
    <string name="uncheckAll">Снять выделение</string>
    <string name="checkAll">Выбрать все</string>
    <string name="basket">Корзина</string>
    <string name="delete">Удалить</string>
    <string name="toRegistration">ОФОРМИТЬ ЗАКАЗ</string>
    <string name="publisher">Издательство:</string>
    <string name="countInWarehouse">Число на складе:</string>
    <string name="pagesNumber">Количество страниц:</string>
    <string name="coverType">Тип обложки:</string>
    <string name="reviews">Отзывы:</string>
    <string name="bookParameters">параметры книги</string>
    <string name="bookstore">Bookstore</string>
    <string name="putInBasket">ПОЛОЖИТЬ В КОРЗИНУ</string>
    <string name="searchInCategory">Поиск по категории</string>
    <string name="search">Поиск</string>
    <string name="registration">Заказ успешно оформлен!</string>
    <string name="to_orders">Посмотреть</string>
    <string name="orderRegistration">Регистрация заказа</string>
    <string name="fillForm">Заполните форму :</string>
    <string name="phoneNumber">№ телефона*</string>
    <string name="necessaryToFill">* -- обязательно для заполнения</string>
    <string name="name">Имя</string>
    <string name="city">Город*</string>
    <string name="street">Улица*</string>
    <string name="flat">№ квартиры*</string>
    <string name="porch">№ подъезда</string>
    <string name="floor">Этаж</string>
    <string name="endRegistration">Закончить</string>
    <string name="back">Вернуться</string>
    <string name="house">Дом*</string>
    <string name="price">Цена(1/n):</string>
    <string name="foreign">Иностранная литература</string>
    <string name="kid">Детская литература</string>
    <string name="business">Бизнес-литература</string>
    <string name="fiction">Художественная литература</string>
    <string name="study">Учебная литература</string>
    <string name="nonfiction">Нехудожественная литература</string>
    <string name="input_search">Введите книгу или автора</string>
    <string name="orders">Заказы</string>
    <string name="order">Заказ</string>
    <string name="company_name">OOO "Bookstore"</string>
    <string name="hello_message">Добро пожаловать в Bookstore! Порадуйте себя возможностью окунуться в мир книг :)</string>
    <string name="shops_map">Карта магазинов</string>
    <string name="shop_info">Информация о магазине</string>
    <string name="scan_book">Сканировать</string>
    <string name="catalogue">Каталог</string>
    <string name="maps">Карты</string>
    <string name="nav_info">Информация</string>
    <string name="profile">Профиль</string>
    <string name="account">Аккаунт</string>
    <string name="succeed_message">Ожидайте получение заказа в течение недели.</string>
    <string name="email">Email:</string>
    <string name="password">Пароль:</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="init_price">0.0</string>
    <string name="rub">р.</string>
    <string name="user_email">Email*</string>
    <string name="date">Дата:</string>
    <string name="sum">Сумма:</string>
    <string name="status">Статус:</string>
    <string name="empty_orders">Список заказов пуст.</string>
    <string name="multiply"> * </string>
    <string name="title_activity_maps">Map</string>
    <string name="search_title">Поиск</string>
    <string name="title_book_parameters">Параметры книги:</string>
    <string name="registration_failed">Registration failed !</string>
    <string name="bookimage">bookImage</string>
    <string name="btn_expand">btn_expand</string>
    <string name="background">background</string>
</resources>
