<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_basket"
        android:icon="@drawable/ic_shopping_basket_yellow_24dp"
        android:title="@string/basket"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_orders"
        android:icon="@drawable/ic_local_shipping_purple_24dp"
        android:title="@string/orders"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_qrcode"
        android:icon="@drawable/ic_iconmonstr_qr_code_2"
        android:title="@string/scan_book"
        app:showAsAction="ifRoom"/>
</menu>