<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:clipToPadding="false"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cvOrder"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/bezch"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/boarders5" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:stretchColumns="1">

            <TableRow>

                <TextView android:text="@string/date" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_marginStart="5dp" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/sum" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_marginStart="5dp" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/status" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_marginStart="5dp" />
            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>